--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <a href="./portfolio.html" class="nav__link link">Портфоліо</a>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link link">Контакти</a>
+              <a href="./ice.html" class="nav__link link">Контакти</a>
             </li>
           </ul>
         </nav>
